Bugfix: when browsers use different fonts, 'create request' wraps incorrectly

--- a/css/screen/screen-common.css
+++ b/css/screen/screen-common.css
@@ -302,10 +302,19 @@
   max-height: 24px;
 }
 
+.mcneese #mcneese-header > .header-top > .header-menu-1 > .html_tag-nav > .navigation_list > .menu_link-wrapper-standout.menu_link-create_request-wrapper {
+  max-height: 46px;
+}
+
 .mcneese #mcneese-header > .header-top > .header-menu-1 > .html_tag-nav > .navigation_list > .menu_link-wrapper-standout.menu_link-create_request-wrapper > a.menu_link {
   width: 120px;
   min-width: 120px;
   max-width: 120px;
+
+  padding-top: 15px;
+  padding-bottom: 6px;
+
+  line-height: 1em;
 }
 
 .mcneese #mcneese-header > .header-top > .header-menu-1 > .html_tag-nav > .navigation_list > .menu_link-login-wrapper > a.menu_link,
